--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -1,64 +1,112 @@
 <div class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover">
-  <div class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
-    <!-- Main Col -->
-    <div id="profile"
-      class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-lg shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
-      <div class="p-4 md:p-12 text-center lg:text-left">
-        <div class="w-full lg:w-2/5 flex justify-center items-center mb-4">
-          <img [src]="userData.img" alt="Profile Image">
+  <div
+    class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0 dark-mode:text-white light-mode:text-black">
+    <div
+      class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+      <div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
+
+        <!-- Visualizar Imagen Perfil -->
+        <div class="w-full flex justify-center items-center mb-4">
+          <div class="lg:w-2/5 flex justify-center items-center rounded-full overflow-hidden">
+            <img [src]="userData.img" alt="Profile Image">
+          </div>
         </div>
-        <h1 class="text-3xl font-bold pt-8 lg:pt-0">Your name</h1>
-        <input type="text" id="username"
-          class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-          placeholder="Username" [(ngModel)]="userData.username" required>
-        <h1 class="text-3xl font-bold pt-8 lg:pt-0">Name</h1>
-        <input type="text" id="username"
-          class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-          placeholder="Username" [(ngModel)]="userData.name" required>
-        <div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
-        <p class="pt-4 text-base font-bold flex items-center justify-center lg:justify-start">
-          <i class="fas fa-envelope text-green-700 pr-4"></i>
-          Email <input type="text" id="username"
-            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-            placeholder="Username" [(ngModel)]="userData.email" required>
-        </p>
-        <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
-          <i class="fas fa-birthday-cake text-green-700 pr-4"></i>
-          Born Date
-          <input type="text" id="username"
-            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-            placeholder="Username" [(ngModel)]="userData.born_date" required>
-        </p>
-        <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
-          <i class="fas fa-hospital text-green-700 pr-4"></i>
-          Area
-          <input type="text" id="username"
-            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-            placeholder="Username" [(ngModel)]="userData.area" required>
-        </p>
-        <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
-          <i class="fas fa-image text-green-700 pr-4"></i>
-          Image
-          <input type="file" accept="image/*" (change)="onFileSelected($event)">
-        </p>
-        <div class="pt-12 pb-8">
-          <button (click)="saveChanges()"
-            class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-            Save
-          </button>
-          <label class="flex items-center">
-            <input checked id="green-checkbox" type="checkbox" [(ngModel)]="deleteCheckbox"
-              (change)="updateDeleteButtonClass()"
-              class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-            Delete
+
+
+
+        <!-- Campo de Usuario -->
+        <div class="relative z-0 w-full mb-5 group">
+          <input type="text" name="username" id="username"
+            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+            placeholder=" " [(ngModel)]="userData.username" [required]="true" [minlength]="6" #usernameInput="ngModel">
+          <label for="username"
+            class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Usuario</label>
+          <div
+            *ngIf="usernameInput.touched && usernameInput.invalid && (usernameInput.errors?.['required'] || usernameInput.errors?.['minlength'])"
+            class="text-red-500">
+            <div *ngIf="usernameInput.errors?.['required']">El usuario es obligatorio</div>
+            <div *ngIf="usernameInput.errors?.['minlength']">El usuario debe tener al menos 6 caracteres</div>
+          </div>
+        </div>
+
+        <!-- Campo de Nombre -->
+        <div class="relative z-0 w-full mb-5 group">
+          <input type="text" name="name" id="name"
+            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+            placeholder=" " [(ngModel)]="userData.name" required minlength="3" #nameInput="ngModel">
+          <label for="name"
+            class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Nombre</label>
+          <div
+            *ngIf="nameInput.touched && nameInput.invalid && (nameInput.errors?.['required'] || nameInput.errors?.['minlength'])"
+            class="text-red-500">
+            <div *ngIf="nameInput.errors?.['required']">El nombre es obligatorio</div>
+            <div *ngIf="nameInput.errors?.['minlength']">El nombre debe tener al menos 2 caracteres</div>
+          </div>
+        </div>
+
+        <!-- Campo de Correo Electrónico -->
+        <div class="relative z-0 w-full mb-5 group">
+          <input type="email" name="email" id="email"
+            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+            placeholder=" " [(ngModel)]="userData.email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            #emailInput="ngModel">
+          <label for="email"
+            class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Correo
+            Electrónico</label>
+        </div>
+
+        <!-- Campo de Fecha de Nacimiento -->
+        <div class="relative z-0 w-full mb-5 group">
+          <input type="date" name="born_date" id="born_date"
+            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+            placeholder=" " [(ngModel)]="userData.born_date" required #bornDateInput="ngModel">
+          <label for="bornDate"
+            class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Fecha
+            de Nacimiento</label>
+        </div>
+
+        <!-- Campo de Área -->
+        <div class="relative z-0 w-full mb-5 group">
+          <input type="text" name="area" id="area"
+            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+            placeholder=" " [(ngModel)]="userData.area" required #areaInput="ngModel">
+          <label for="area"
+            class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Área</label>
+        </div>
+
+        <!-- Botón para Subir Imagen -->
+        <div class="relative z-0 w-full mb-5 group flex items-center">
+          <input type="file" accept="image/*" (change)="onFileSelected($event)" class="hidden" id="imageInput">
+          <label for="imageInput" class="cursor-pointer mr-2">
+            <i class="fas fa-image text-green-700 pr-4"></i>
           </label>
-          <button type="button" (click)="deleteUser()"
-            [class]="deleteButtonColor + ' text-white focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'"
-            [disabled]="!deleteCheckbox">Eliminar</button>
+          <span class="text-sm text-gray-500">Subir Imagen</span>
         </div>
+
+        <div class="pt-12 pb-8">
+          <!-- Botón de guardar cambios -->
+          <div class="flex justify-center">
+            <button (click)="saveChanges()"
+              class="bg-green-700 hover:bg-green-900 text-white font-bold py-3 px-6 rounded-full shadow-md">
+              Guardar Cambios
+            </button>
+          </div>
+          <!-- Botón de eliminar perfil -->
+          <div class="flex justify-center items-center mt-4">
+            <label class="flex items-center mr-3">
+              <input checked id="green-checkbox" type="checkbox" [(ngModel)]="deleteCheckbox"
+                (change)="updateDeleteButtonClass()"
+                class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+              <span class="ml-2 text-gray-700 dark:text-gray-300">Eliminar Perfil</span>
+            </label>
+            <button type="button" (click)="deleteUser()"
+              [class]="deleteButtonColor + ' text-white font-medium py-3 px-6 rounded-full shadow-md transition duration-300 ease-in-out transform hover:scale-105'"
+              [disabled]="!deleteCheckbox">Eliminar</button>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </div>
 </div>
-
-
