--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -2,10 +2,6 @@
   <!-- Agregar mt-16 para ajustar el margen superior -->
   <div
     class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0 dark-mode:text-white light-mode:text-black">
-    <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-      <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
-      CodeMasterMentors
-    </a>
     <div
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
@@ -52,10 +48,10 @@
           <!-- -------------------------------------------------------------------------------------- -->
 
           <!-- Role Field -->
-          <div>
-            <label for="role" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Role</label>
+          <div class="mb-4">
+            <label for="role" class="block text-gray-700 font-bold mb-2 dark:text-white">Role</label>
             <select name="role" id="role" [(ngModel)]="role_id" required #roleIdInput="ngModel"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+              class="block appearance-none w-full bg-white border border-gray-300 text-gray-700 py-2 px-3 rounded leading-tight focus:outline-none focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200">
               <option value="" disabled>Select a role</option>
               <ng-container *ngFor="let role of roles.data">
                 <option *ngIf="role.name !== 'Admin'" [ngValue]="role.id">{{ role.name }}</option>
@@ -63,6 +59,8 @@
             </select>
             <div *ngIf="roleIdInput.touched && !role_id" class="text-red-500">Role is required</div>
           </div>
+
+
 
           <!-- -------------------------------------------------------------------------------------- -->
 
@@ -73,8 +71,6 @@
               placeholder=" " [(ngModel)]="name" required minlength="3" #nameInput="ngModel">
             <label for="name"
               class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Name</label>
-
-
             <div
               *ngIf="nameInput.touched && nameInput.invalid && (nameInput.errors?.['required'] || nameInput.errors?.['minlength'])"
               class="text-red-500">
@@ -100,17 +96,6 @@
               <div *ngIf="emailInput.errors?.['required']">Email is required</div>
               <div *ngIf="emailInput.errors?.['pattern']">Invalid email format</div>
             </div>
-          </div>
-
-          <!-- -------------------------------------------------------------------------------------- -->
-
-          <!-- Username -->
-          <div class="relative z-0 w-full mb-5 group">
-            <input type="text" [(ngModel)]="username" name="name" id="name"
-              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-              placeholder=" " required />
-            <label for="name"
-              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Title</label>
           </div>
 
           <!-- -------------------------------------------------------------------------------------- -->
@@ -144,15 +129,6 @@
 
           <!-- -------------------------------------------------------------------------------------- -->
 
-          <!-- Image Upload Field -->
-          <!-- <div>
-            <label for="profile_image" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Profile
-              Image</label>
-            <input type="text" name="profile_image" id="profile_image" accept="image/*"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              [(ngModel)]="img" #profileImageInput="ngModel" placeholder="ImageURL">
-          </div> -->
-
           <!-- Img -->
           <div class="relative z-0 w-full mb-5 group flex items-center">
             <input type="file" accept="image/*" (change)="onFileSelected($event)" class="hidden" id="imageInput">
@@ -165,22 +141,8 @@
             </label>
             <span class="text-sm text-gray-500">Subir Imagen</span>
           </div>
+
           <!-- -------------------------------------------------------------------------------------- -->
-
-          <!-- Terms and Conditions -->
-          <!-- <div class="flex items-start">
-            <div class="flex items-center h-5">
-              <input id="terms" aria-describedby="terms" type="checkbox"
-                class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                required>
-            </div>
-            <div class="ml-3 text-sm">
-              <label for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a
-                  class="font-medium text-primary-600 hover:underline dark:text-primary-500" href="#">Terms and
-                  Conditions</a></label>
-            </div>
-          </div> -->
-
 
           <!-- Submit Button -->
           <button type="submit"
