--- a/Frontend/src/app/components/favourite-list/favourite-list.component.html
+++ b/Frontend/src/app/components/favourite-list/favourite-list.component.html
@@ -1,3 +1,4 @@
+<h2 class="block w-full bg-gradient-to-b text-center from-white to-gray-400 bg-clip-text font-bold text-transparent text-3xl sm:text-4xl">Lista de Favoritos</h2>
 <div class="p-4 max-w-lg mx-auto mt-24">
   <ng-container *ngFor="let favouriteList of favouriteLists.data">
     <details class="mb-2">
@@ -32,13 +33,14 @@
 </div>
 
 <!-- Modal -->
-<div *ngIf="showModal" class="fixed z-10 inset-0 overflow-y-auto">
+<div *ngIf="showModal" class="fixed inset-0 overflow-y-auto flex items-center justify-center">
   <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
     <!-- Background overlay -->
     <div class="fixed inset-0 transition-opacity" (click)="closeEditModal()" aria-hidden="true">
       <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
     </div>
     <!-- Modal panel -->
+    <br><br><br><br>
     <div
       class="w-full inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
       role="dialog" aria-modal="true" aria-labelledby="modal-headline">
@@ -63,3 +65,4 @@
     </div>
   </div>
 </div>
+
