--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -7,14 +7,47 @@
     class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
     {{ language.languageName }}
   </button>
-</div>
-<div class="flex justify-center mt-4">
-  <input type="number" [(ngModel)]="minPrice" placeholder="Precio mínimo" class="border rounded px-2 py-1 mr-2">
-  <input type="number" [(ngModel)]="maxPrice" placeholder="Precio máximo" class="border rounded px-2 py-1 mr-2">
-  <button type="button" (click)="applyPriceFilter()"
+  <button type="button" (click)="openPriceModal()"
     class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
     Filtrar por precio
   </button>
+  <ng-container *ngIf="showPriceModal">
+    <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+          <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+        </div>
+        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+        <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+          <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+            <div class="sm:flex sm:items-start">
+              <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                  Filtrar por precio
+                </h3>
+                <!-- Inputs más pequeños -->
+                <div class="flex justify-between">
+                  <input type="number" [(ngModel)]="minPrice" placeholder="Precio mínimo" class="border rounded px-2 py-1 w-1/2 mr-2">
+                  <input type="number" [(ngModel)]="maxPrice" placeholder="Precio máximo" class="border rounded px-2 py-1 w-1/2">
+                </div>
+                <div class="flex justify-between mt-4">
+                  <button type="button" (click)="applyPriceFilter()"
+                    class="flex justify-center w-1/2 rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
+                    Aplicar
+                  </button>
+                  <button type="button" (click)="closePriceModal()"
+                    class="flex justify-center w-1/2 rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
+                    Cancelar
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+
 </div>
 <br>
 <div class="antialiased text-gray-900">
